:construction: Changes in customer register buttons, buttons for switch

--- a/app/src/main/res/layout/activity_customer_register_container.xml
+++ b/app/src/main/res/layout/activity_customer_register_container.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragment_container_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomerRegisterContainer">
+    tools:context=".activities.CustomerRegisterContainer">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager_customer"
