--- a/app/src/main/res/layout/fragment_third_customer_register.xml
+++ b/app/src/main/res/layout/fragment_third_customer_register.xml
@@ -26,14 +26,23 @@
             app:layout_constraintTop_toTopOf="parent"
             style="@style/TitleTextView" />
 
-        <Switch
-            android:id="@+id/switchThirdCustomerRegister"
+        <LinearLayout
+            style="@style/LinearLayoutHorizontalBase"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/questionTitleThirdCustomerRegister"
-            tools:ignore="UseSwitchCompatOrMaterialXml"
-            style="@style/SwitchCustomerRegisterStyle" />
+            app:layout_constraintTop_toBottomOf="@+id/questionTitleThirdCustomerRegister">
+
+            <Button
+                android:id="@+id/yesButtonThirdFragment"
+                style="@style/CustomerRegisterButtonStyle"
+                android:text="@string/button_survey_yes" />
+
+            <Button
+                android:id="@+id/noButtonThirdFragment"
+                style="@style/CustomerRegisterButtonStyle"
+                android:text="@string/button_survey_no" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
