--- a/app/src/main/res/layout/activity_intro_survey.xml
+++ b/app/src/main/res/layout/activity_intro_survey.xml
@@ -51,6 +51,7 @@
                         android:id="@+id/startSurveyButton"
                         android:text="@string/button_survey_intro_page"
                         android:layout_marginTop="50dp"
+                        android:layout_marginBottom="20dp"
                         style="@style/PrincipalButtonStyle" />
                 </LinearLayout>
 
