--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -143,11 +143,11 @@
 
     <style name="PrincipalButtonStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">46dp</item>
+        <item name="android:layout_height">50dp</item>
         <item name="android:layout_marginTop">30dp</item>
         <item name="android:background">@color/grey_coal_300</item>
         <item name="android:textColor">@color/white_300</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:elevation">10dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:layout_gravity">center</item>
