--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,197 +19,108 @@
         android:layout_below="@+id/top_view_main"
         android:layout_marginTop="-80dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <LinearLayout style="@style/LinearLayoutBase">
 
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:rowCount="6"
-                android:columnCount="1"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="45dp">
+            <GridLayout style="@style/GridLayoutCardViewMain">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
                     android:id="@+id/nextRegister"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="12dp"
-                    android:layout_margin="5dp"
-                    android:layout_columnWeight="1"
                     android:layout_row="1"
-                    android:layout_column="0">
+                    android:layout_column="0"
+                    style="@style/CardViewMain">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                    <LinearLayout style="@style/LinearLayoutHorizontalMatchParent">
 
                         <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_weight="1"
                             android:src="@drawable/register_2"
-                            android:layout_gravity="center" />
+                            style="@style/ImageCardViewMain" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Continuar registro"
-                            android:layout_gravity="center"
-                            android:textSize="18sp"
-                            android:textStyle="italic"
-                            android:textColor="@color/grey_coal_300" />
+                            android:text="@string/next_register_title"
+                            style="@style/TitleTextCardViewMain" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
                     android:id="@+id/personalitySurveyButton"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="12dp"
-                    android:layout_margin="5dp"
-                    android:layout_columnWeight="1"
-                    android:layout_marginTop="20dp"
                     android:layout_row="2"
-                    android:layout_column="0">
+                    android:layout_column="0"
+                    style="@style/CardViewMain">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                    <LinearLayout style="@style/LinearLayoutHorizontalMatchParent">
 
                         <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_weight="1"
                             android:src="@drawable/test_man"
-                            android:layout_gravity="center" />
+                            style="@style/ImageCardViewMain" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Test de Personalidad"
-                            android:layout_gravity="center"
-                            android:textSize="18sp"
-                            android:textStyle="italic"
-                            android:textColor="@color/grey_coal_300" />
+                            android:text="@string/personality_survey_title"
+                            style="@style/TitleTextCardViewMain" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:id="@+id/programsButton"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="12dp"
-                    android:layout_margin="5dp"
-                    android:layout_columnWeight="1"
-                    android:layout_marginTop="20dp"
                     android:layout_row="3"
-                    android:layout_column="0">
+                    android:layout_column="0"
+                    style="@style/CardViewMain">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                    <LinearLayout style="@style/LinearLayoutHorizontalMatchParent">
 
                         <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_weight="1"
                             android:src="@drawable/results_1"
-                            android:layout_gravity="center" />
+                            style="@style/ImageCardViewMain" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Programas Sena"
-                            android:layout_gravity="center"
-                            android:textSize="18sp"
-                            android:textStyle="italic"
-                            android:textColor="@color/grey_coal_300" />
+                            android:text="@string/programs_title"
+                            style="@style/TitleTextCardViewMain" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="12dp"
-                    android:layout_margin="5dp"
-                    android:layout_columnWeight="1"
-                    android:layout_marginTop="20dp"
                     android:layout_row="4"
-                    android:layout_column="0">
+                    android:layout_column="0"
+                    style="@style/CardViewMain">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                    <LinearLayout style="@style/LinearLayoutHorizontalMatchParent">
 
                         <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_weight="1"
                             android:src="@drawable/user_1"
-                            android:layout_gravity="center" />
+                            style="@style/ImageCardViewMain" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Perfil"
-                            android:layout_gravity="center"
-                            android:textSize="18sp"
-                            android:textStyle="italic"
-                            android:textColor="@color/grey_coal_300" />
+                            android:text="@string/profile_tile"
+                            style="@style/TitleTextCardViewMain" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
                     android:id="@+id/buttonLogOut"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="12dp"
-                    android:layout_margin="5dp"
-                    android:layout_columnWeight="1"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
                     android:layout_row="5"
-                    android:layout_column="0">
+                    android:layout_column="0"
+                    style="@style/CardViewMain">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:gravity="center">
+                    <LinearLayout style="@style/LinearLayoutHorizontalMatchParent">
 
                         <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_weight="1"
                             android:src="@drawable/logout"
-                            android:layout_gravity="center" />
+                            style="@style/ImageCardViewMain" />
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Salir"
-                            android:layout_gravity="center"
-                            android:textSize="18sp"
-                            android:textStyle="italic"
-                            android:textColor="@color/grey_coal_300" />
+                            android:text="@string/logout_title"
+                            style="@style/TitleTextCardViewMain" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
-
             </GridLayout>
         </LinearLayout>
     </ScrollView>
@@ -236,36 +147,4 @@
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp" />
-
-
-    <!--<LinearLayout
-        tools:ignore="MissingConstraints"
-        style="@style/LinearLayoutBase">
-
-        <LinearLayout style="@style/LinearLayoutAlignItems">
-
-            <TextView
-                android:id="@+id/welcomeMessageMain"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="300sp"
-                android:textAlignment="center"
-                android:text="Hello World!" />
-
-            <Button
-                android:id="@+id/nextRegister"
-                android:text="Seguir registro"
-                style="@style/PrincipalButtonStyle" />
-
-            <Button
-                android:id="@+id/personalitySurveyButton"
-                android:text="Encuesta"
-                style="@style/PrincipalButtonStyle" />
-
-            <Button
-                android:id="@+id/buttonLogOut"
-                android:text="Salir"
-                style="@style/PrincipalButtonStyle" />
-        </LinearLayout>
-    </LinearLayout>-->
 </RelativeLayout>
