--- a/app/src/main/res/layout/item_list_horizontal_programs.xml
+++ b/app/src/main/res/layout/item_list_horizontal_programs.xml
@@ -6,35 +6,34 @@
 
     <LinearLayout
         android:layout_width="200dp"
-        android:layout_height="140dp"
+        android:layout_height="250dp"
         android:elevation="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:background="@drawable/horizontal_programs_bg"
         android:gravity="center">
 
         <ImageView
             android:id="@+id/imageIdHorizontalProgram"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
             android:src="@drawable/android"
-            android:layout_marginStart="10dp"
             android:layout_weight="1" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginEnd="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/nameIdHorizontalProgram"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:text="Nombre" />
@@ -43,9 +42,9 @@
                 android:id="@+id/infoIdHorizontalProgram"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textAlignment="center"
-                android:text="Descripción" />
+                android:text="Modalidad" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
