--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -343,4 +343,16 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <!--Table Styles-->
+
+    <style name="StudyProgramRowTableStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/grey_coal_400</item>
+        <item name="android:padding">10sp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">left</item>
+    </style>
+
 </resources>
