--- a/app/src/main/res/layout/activity_intro_personalities.xml
+++ b/app/src/main/res/layout/activity_intro_personalities.xml
@@ -10,6 +10,20 @@
         tools:ignore="MissingConstraints"
         style="@style/LinearLayoutBase">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@color/mustard_500">
+
+            <ImageView
+                android:id="@+id/backButtonPersonalities"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:srcCompat="@drawable/arrow_back" />
+        </LinearLayout>
+
         <ScrollView
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
