--- a/app/src/main/res/layout/activity_study_program.xml
+++ b/app/src/main/res/layout/activity_study_program.xml
@@ -10,6 +10,20 @@
         tools:ignore="MissingConstraints"
         style="@style/LinearLayoutBase">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@color/mustard_500">
+
+            <ImageView
+                android:id="@+id/backButtonStudyProgram"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:srcCompat="@drawable/arrow_back" />
+        </LinearLayout>
+
         <ScrollView
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -19,24 +33,12 @@
 
             <LinearLayout style="@style/LinearLayoutBase">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:background="@color/mustard_500">
-
-                    <ImageView
-                        android:id="@+id/backButtonStudyProgram"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        app:srcCompat="@drawable/arrow_back" />
-                </LinearLayout>
-
                 <TextView
                     style="@style/TitlePageTextView"
                     android:id="@+id/nameProgram"
                     android:layout_marginTop="20dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginEnd="40dp"
                     android:textSize="25sp"
                     android:textColor="@color/grey_coal_500"
                     android:text="@string/study_program_title" />
@@ -166,6 +168,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginEnd="40dp"
+                    android:layout_marginBottom="30dp"
                     android:text="Descripción..." />
             </LinearLayout>
         </ScrollView>
