--- a/app/src/main/res/layout/item_list_horizontal_programs.xml
+++ b/app/src/main/res/layout/item_list_horizontal_programs.xml
@@ -26,6 +26,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
