--- a/app/src/main/res/layout/slider_welcome_intro_layout.xml
+++ b/app/src/main/res/layout/slider_welcome_intro_layout.xml
@@ -7,9 +7,9 @@
     <ImageView
         android:id="@+id/questionImageTitleCustomerRegister"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/cat" />
+        android:src="@drawable/study1" />
 
     <LinearLayout
         android:layout_width="match_parent"
